<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tts.TextToSpeechActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_text_to_speech_header"
        android:textColor="#929292"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:background="#3582a6ee"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="2.0sp"
        android:padding="24dp"
        android:text="@string/txt_text_to_speech_sample_paragraph"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSample"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_text_to_speech_start_button" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSample"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@id/btnStart"
        android:text="@string/txt_text_to_speech_stop_button" />

</RelativeLayout>
