<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default"
    android:orientation="vertical"
    tools:context=".animations.transitions.TransitionsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_animations_sample_transitions_label"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/containerFirst"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="#F4F1DA"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_default">

        <Button
            android:id="@+id/btnFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_transitions_first"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/txt_transition_first"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
