<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    tools:context=".encrypt.AES256Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editInput"
        android:text="@string/txt_aes256_plain_text"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="22sp"
        tools:text="test" />

    <Button
        android:id="@+id/btnEncrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/txt_aes256_encrypt_button"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:labelFor="@+id/editInput"
        android:text="@string/txt_aes256_encrypted"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtEncrypted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="22sp"
        tools:text="test" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:labelFor="@+id/editInput"
        android:text="@string/txt_aes256_decrypted"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtDecrypted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="22sp"
        tools:text="test" />

</LinearLayout>
