<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default"
    android:orientation="vertical"
    tools:context=".datetime.DateTimeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:gravity="center"
        android:text="@string/txt_date_time_title"
        android:textSize="24sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/txt_date_time_timestamp" />

    <TextView
        android:id="@+id/txtCurrentTimestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="22sp"
        tools:text="0000" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:orientation="vertical"
        android:padding="@dimen/padding_default">

        <RadioButton
            android:id="@+id/radioToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="@dimen/padding_small"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:text="@string/txt_date_time_today"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioIn5days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:text="@string/txt_date_time_in_5_days"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio2daysAgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:text="@string/txt_date_time_2_days_ago"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtFormattingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_default"
        tools:text="Format dd MMM yyyy" />

    <TextView
        android:id="@+id/txtFormatting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:background="#DBC7E6"
        android:paddingStart="@dimen/padding_large"
        android:paddingTop="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_large"
        android:paddingBottom="@dimen/padding_default"
        android:textSize="22sp"
        tools:text="00/00/0000" />

</LinearLayout>
