<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_default"
    android:orientation="vertical"
    tools:context=".toggle.SwitchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/txt_switch_chapter_arrow"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_switch_chapter_description"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_weight="1"
        android:background="#e0e0e0"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_default">

        <Button
            android:id="@+id/btnSwitchIcon"
            style="@style/Theme.MaterialComponents"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_default"
            android:text="@string/txt_switch_chapter_switch_icon_button"
            android:textColor="@android:color/black" />

        <include
            android:id="@+id/switchRadioButton"
            layout="@layout/layout_switch_radio_button" />

    </LinearLayout>

</LinearLayout>
