<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".dialog.DialogActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/bg_bottom_decoration"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_default">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_weight="1"
            android:text="@string/txt_dialog_description_1"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnDialogFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_demo"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_default"
        android:background="@drawable/bg_bottom_decoration"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_default">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_weight="1"
            android:text="@string/txt_description_2"
            android:textColor="@color/colorAccent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_demo"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>
